2003-09-24  John Hinsdale  <hin@alma.com>
	* modules/oracle/oracle.lisp: connection retry logic
	* src/makemake.in: syntax error in variable definition

2003-09-24  Sam Steingold  <sds@gnu.org>

	readline is now used on Cygwin/X11
	* stream.d (stdio_same_tty_p): extracted from make_terminal_stream_()
	use ttyname(stdin)=ttyname(stdout) on cygwin
	(make_terminal_stream_): use it

2003-09-23  Sam Steingold  <sds@gnu.org>

	* init.lisp (load) [:COMPILING]: bind *ERROR-COUNT* *WARNING-COUNT*
	*STYLE-WARNING-COUNT* like in WITH-COMPILATION-UNIT
	* compiler.lisp (match-known-unknown-functions): do not try to
	print source location when it is not available

2003-09-22  Sam Steingold  <sds@gnu.org>

	* unix.d (SHUT_RD, SHUT_WR, SHUT_RDWR): define when not defined
	* makemake.in (encflags) [!UNICODE]: void
	* utils/modprep.lisp (modprep) [!UNICODE]: no :external-format
	Reported by Don Cohen <don-sourceforge@isis.cs3-inc.com>

2003-09-19  Sam Steingold  <sds@gnu.org>

	* unix.d (START_NO_BLOCK, END_NO_BLOCK): new macros
	* stream.d (listen_handle): use them

2003-09-17  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (f-side-effect): NOTINLINE ==> seclass (t . t)
	* clos.lisp (%make-gf): seclass is (t . t) because a generic
	function can always signal a NO-APPLICABLE-METHOD error
	(std-add-method, std-remove-method): since seclass is (t . t),
	disable the CLOSURE-SET-SECLASS call

2003-09-17  Sam Steingold  <sds@gnu.org>

	* makemake.in: respect LDFLAGS
	Mac OS X (Darwin) is a BINARY_DISTRIB system

2003-09-16  Sam Steingold  <sds@gnu.org>

	* genclisph.d (string_to_asciz, TheAsciz): enabled
	for Dan Stanger's gdi module

2003-09-15  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (grab_to_object): new function
	(GRAB-POINTER, GRAB-KEYBOARD): use it
	(xlib_error_handler): ise ELT for sequences, not AREF
	include <string.h> to avoid some warnings

2003-09-15  Sam Steingold  <sds@gnu.org>

	* stream.d (SOCKET-OPTIONS): old systems might not have